# vsl-bindgen

./: .gitignore  CMakeLists.txt  Makefile  README.md  appveyor.yml  install_manifest.txt
src/: SerializeCStruct.cpp  SerializeFunction.cpp  SerializeTypedef.cpp  convertComment.cpp  convertComment.hpp  executor.cpp  executor.hpp  extract.cpp  extract.hpp  extractor.cpp  main.cpp  main.hpp  typeName.cpp  typeName.hpp
test/: a.h  test.c  test.cpp
